--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
       aku suka bapak
     </header>
     <h1>
-      halaman contact
+      halaman contact|
+ngubahhaadojas;kj
     </h1>
     <div>
       lorem ipsum
