--- a/test.html
+++ b/test.html
@@ -3,6 +3,12 @@
   <meta charset="UTF-8">
   <meta name="Viewport" content="width=device-width,initial-scale=1.0">
   <body>
+   
+<ol>
+  <li>First</li>
+  <li>Second</li>
+  <li>Third</li>
+</ol>
     <header>
       aku suka bapak
     </header>
