--- a/test.html
+++ b/test.html
@@ -5,10 +5,13 @@
   <body>
    
 <ul>
-  <li>First</li>
-  <li>Second</li>
+  <li><a href="about.html">
+    about
+  </a></li>
+  <li>Seconsssd</li>
   <li>Third</li>
 </ul>
+<p><img src="napoleon-bonaparte-73543_1280.jpg" alt="gambar" width="100" height="48" /></p>
     <header>
       aku suka bapak
     </header>
