--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,23 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="Viewport" content="width=device-width,initial-scale=1.0">
+ 
   <body>
-    <header>
-      aku suka bapak
-    </header>
-    <h1>
-      paku suka toro ini halaman kontak 
-    </h1>
-    <div>
-      lorem ipsum jikoku
+    <div class="nyoba nyoba">
+      <ul>
+        <li><a href="about.html">
+          about
+        </a></li>
+        <li>Seconsssd</li>
+        <li>Third</li>
+      </ul>
+      <p><img src="napoleon-bonaparte-73543_1280.jpg" alt="napoleon" width="100" height="48" /></p>
+      <!--haloo saya-->
+         
     </div>
+
   </body>
 </head>
 </html>
