--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -11,7 +12,8 @@
   <li>Seconsssd</li>
   <li>Third</li>
 </ul>
-<p><img src="napoleon-bonaparte-73543_1280.jpg" alt="gambar" width="100" height="48" /></p>
+<p><img src="napoleon-bonaparte-73543_1280.jpg" alt="napoleon" width="100" height="48" /></p>
+<!--haloo saya-->
     <header>
       aku suka bapak
     </header>
