--- a/about.html
+++ b/about.html
@@ -3,7 +3,9 @@
   <meta charset="UTF-8">
   <meta name="Viewport" content="width=device-width,initial-scale=1.0">
   <body>
-    
+    <p>super skkrip <var>a<sup> 2</sup></var> + <var>b<sup>3</sup></var></p>
+    <br>
+    <p>sub skrip <var>a<sub>ho</sub></var></p>
     <header>
       aku suka bapak
     </header>
