menambah kan semantic

--- a/about.html
+++ b/about.html
@@ -8,10 +8,10 @@
     <p>sub skrip <var>a<sub>ho</sub></var></p>
     <header>
       aku suka bapak
-    </header>
-    <h1>
+    </header><aside> <h1>
       paku suka toro
-    </h1>
+    </h1></aside>
+   
     <div>
       i lope yu
       
