--- a/test.html
+++ b/test.html
@@ -5,13 +5,19 @@
   <meta name="Viewport" content="width=device-width,initial-scale=1.0">
   <body>
    
-<ul>
-  <li><a href="about.html">
-    about
-  </a></li>
-  <li>Seconsssd</li>
-  <li>Third</li>
-</ul>
+<nav>
+  <ul>
+    <li><a href="about.html">
+      about
+    </a></li>
+    <li><a href="contact.html">
+      contact
+    </a></li>
+    <li><a href="wikipedia.html">
+      wiki
+    </a></li>
+  </ul>
+</nav>
 <hr>
 <p><img src="napoleon-bonaparte-73543_1280.jpg" alt="napoleon" width="100" height="48" /></p>
 <!--haloo saya-->
@@ -25,6 +31,15 @@
     <div>
       lorem ipsum
     </div>
+    <main><h1>HTML</h1>
+      <b>Markup Language (HTML)</b>  is the standard markup language[a] for documents designed to be displayed in a <a href="https://www.youtube.com">web browser</a>. It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript, a programming language.
+      <p>Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for its appearance.</p>
+      
+      <h2>History</h2>
+       <h5>
+       Photograph of Tim Berners-Lee in April<span class="tahun">  2009</span>
+        Tim Berners-Lee in April <span class="tahun">  2009</span>
+        In 1980, physicist Tim Berners-Lee, a contractor at CERN, proposed and prototyped ENQUIRE, a system for CERN researchers to use and share documents. In 1989, Berners-Lee wrote a memo proposing an Internet-based hypertext system.[4] Berners-Lee specified HTML and wrote the browser and server software in late 1990. That year, Berners-Lee</h5></main>
   </body>
 </head>
 </html>
