--- a/tabel.html
+++ b/tabel.html
@@ -7,34 +7,65 @@
  
    
   </head>
-  <table><caption>Phone numbers</caption>
-    <thead>
-      <tr>
-     <th>Name</th>
-     <th colspan="2">Phone</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-     <td>John</td>
-     <td>577854</td>
-     <td>577855</td>
-      </tr>
-      <tr>
-     <td>Jack</td>
-     <td>577856</td>
-     <td>577857</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-     <td>&nbsp;</td>
-     <td>Personal</td>
-     <td>Office</td>
-      </tr>
-    </tfoot>
-   </table>
+ 
+  
   <body>
+
+    <table border="1"><caption>Phone numbers</caption>
+      <thead>
+        <tr>
+       <th>Name</th>
+       <th colspan="2">Phone</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+       <td>John</td>
+       <td>577854</td>
+       <td>577855</td>
+        </tr>
+        <tr>
+       <td>Jack</td>
+       <td>577856</td>
+       <td>577857</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+       <td>&nbsp;</td>
+       <td>Personal</td>
+       <td>Office</td>
+        </tr>
+      </tfoot>
+     </table>
+
+
+     <hr>
+     <table border="1"><caption>Phone numbers</caption>
+      <thead>
+        <tr>
+       <th rowspan="2">Name</th>
+       <th colspan="2">tahun 2010</th>
+        </tr>
+        <tr>
+          <th>populasi</th>
+          <th>nama</th>
+ 
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+       <td>John </td>
+       <td>577854</td>
+       <td>577855</td>
+        </tr>
+        <tr>
+       <td>Jack</td>
+       <td>577856</td>
+       <td>577857</td>
+        </tr>
+      </tbody>
    
+     </table>
   </body>
 </html>
