menambah form dan memperjelas div

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,11 @@
         about
       </a>
       <div> 
+        <a href="about.html">
+          about
+        </a>
       <img src="napoleon-bonaparte-73543_1280.jpg" alt="napoleon" width="100" height="48" />
+     
       <p>logo napoleon</p>
     </div>
       
