--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="Viewport" content="width=device-width,initial-scale=1.0">
  
   <body>
-
+<!--contoh penggunaan list-->
       <ul>
         <li><a href="about.html">
           about
@@ -13,6 +13,7 @@
         <li>Seconsssd</li>
         <li>Third</li>
       </ul>
+      <!--contoh penggunaan div-->
       <a href="about.html">
         about
       </a>
