belajar css stylesheet awal

--- a/form.html
+++ b/form.html
@@ -54,7 +54,7 @@
     <option value="xl" selected>xl</option>
     <option value="l">l</option>
   </select>
- 
+ <!--validasi dan catatan dan requirement suatu form-->
      </div>
      <div>
       <label for="notes">Catatan untuk penjual</label>
