--- a/about.html
+++ b/about.html
@@ -2,16 +2,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="Viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="stylesheet" href="C:\Users\asus\proyek\html,css,js proyek\asset\css\about.css">
   <body>
     <p>super skkrip <var>a<sup> 2</sup></var> + <var>b<sup>3</sup></var></p>
     <br>
     <p>sub skrip <var>a<sub>ho</sub></var></p>
     <header>
       aku suka bapak
-    </header><aside> <h1>
+    </header><aside> <h1 >
       paku suka toro
-    </h1></aside>
-   
+    </h1 ></aside>
+    <!--inline style-->
+   <!--<style> h1{color: rgb(43, 128, 100); font-size:small ;}</style> -->
     <div>
       i lope yu
       
